# QuarkEngine

./: .gitignore  .gitmodules  CMakeLists.txt
Quark/: QEMain.cpp
Quark-API/: QuarkAPI.hpp  QuarkTypes.hpp
Quark-API/Platform/: QEPlatform.hpp  QEPlatformRTTI.hpp
Quark-API/Render/: RenderContext.hpp  RenderDevice.hpp
Quark-API/Render/Texture/: Image.hpp  ImageFormat.hpp  Texture.hpp  TextureBorder.hpp  TextureFilter.hpp  TextureFormat.hpp
Quark-API/System/Input/: InputManager.hpp  Keyboard.hpp  Mouse.hpp
Quark-API/System/Window/: QEWindow.hpp  QEWindowAttribute.hpp  Window.hpp  WindowAttribute.hpp
Quark-API/Util/: HashHelper.hpp
Quark-Core/Common/: CMakeLists.txt  QEMain.cpp
Quark-Core/Common/System/Input/: QEInputManager.cpp  QEInputManager.hpp
Quark-Core/Common/System/Window/: QEWindow.cpp  QEWindow.hpp
Quark-Core/Linux/: CMakeLists.txt
Quark-Core/Linux/Input/: XCBInputManager.cpp  XCBInputManager.hpp
Quark-Core/Linux/Window/: XCBWindow.cpp  XCBWindow.hpp
Quark-Core/Windows/: CMakeLists.txt
Quark/System/Window/: QEWindowImpl.cpp  QEWindowImpl.hpp
