CMAKE_MINIMUM_REQUIRED(VERSION 3.0 FATAL_ERROR)

####################################################################################################
## [C++::PROJECT]
####################################################################################################
PROJECT(QuarkEngine CXX)

####################################################################################################
## [DEPENDENCY::INCLUDE]
####################################################################################################
INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}/")

####################################################################################################
## [C++::SOURCE]
####################################################################################################
FILE(GLOB_RECURSE SOURCE_FILES "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")

####################################################################################################
## [C++::EXECUTABLE]
####################################################################################################

ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCE_FILES})

IF (${CMAKE_SYSTEM_NAME} STREQUAL Windows)
	TARGET_LINK_LIBRARIES(${PROJECT_NAME} QuarkWindows)
ELSEIF (${CMAKE_SYSTEM_NAME} STREQUAL Linux)
	TARGET_LINK_LIBRARIES(${PROJECT_NAME} QuarkLinux)
ENDIF ()
