CMAKE_MINIMUM_REQUIRED(VERSION 3.0 FATAL_ERROR)

####################################################################################################
## [C++::PROJECT]
####################################################################################################
PROJECT(QuarkLinux CXX)

####################################################################################################
## [DEPENDENCY::INCLUDE]
####################################################################################################
INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}/")

####################################################################################################
## [C++::SOURCE]
####################################################################################################
FILE(GLOB_RECURSE SOURCE_FILES "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")

####################################################################################################
## [C++::EXECUTABLE]
####################################################################################################

ADD_LIBRARY(${PROJECT_NAME} ${SOURCE_FILES})

####################################################################################################
## [C++::LINKER]
####################################################################################################

TARGET_LINK_LIBRARIES(${PROJECT_NAME} xcb xcb-icccm)
